minio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
    - port: 9090
      protocol: TCP
      name: console
    - port: 9091
      protocol: TCP
      name: api
  selector:
    app: minio
  type: ClusterIP
